# RoboTemplate

./: .libtoc  README.md  env.yaml  example.html  pyproject.toml  tasks.py
.github/workflows/: main.yml
ci/: run_tests.sh
libraries/: example_library.py
libraries/framework/: environment.py
output/: keyword_docs.html
output/src/: homepage.html
output/src/libraries/: example_library.html
output/src/libraries/framework/: environment.html
output/src/resources/: CommonSetupTeardown.html
output/src/tests/example_suite_folder/: example_suite_test.html
reports/docs/: example_test.html
reports/tests/: log.html  output.xml  report.html
resources/: CommonSetupTeardown.resource
tests/: __init__.robot  example_test.robot
tests/example_suite_folder/: __init__.robot  example_siute_test.robot  example_suite_test.resource  example_suite_test_library.py
tests/example_suite_folder_2/: example_siute_test_2.robot  example_suite_test_2.resource  example_suite_test_2_library.py
